fix: start-align image in regular card visual container
The .mg-card__image had align-self: center, causing images to be
vertically centered within the visual area. Changed to flex-start
so images align to the top.

--- a/stories/Components/Cards/Card/card.scss
+++ b/stories/Components/Cards/Card/card.scss
@@ -90,7 +90,7 @@
   &__image {
     object-fit: cover;
     width: 100%;
-    align-self: center;
+    align-self: flex-start;
   }
 
   &__label {
